...
fun WorkerStoreLogo(
    modifier: Modifier = Modifier,
    horizontalPadding: Dp = 38.dp,
) {
    Image(
        painter = painterResource(R.drawable.block_box_logo_svg),
        contentDescription = "BlockBox",
        contentScale = ContentScale.Fit,
        modifier = modifier
            .fillMaxWidth()
            .aspectRatio(234f / 96f)
            .then(
                if (horizontalPadding == 0.dp) {
...
